2003-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/fcntl.h: Declare syscalls only when building newlib.
	* libc/include/unistd.h: Ditto.
	* libc/include/stat.h: Ditto.  Also declare struct stat64.

2003-11-24  Artem B. Bityuckiy  <mail_lists@mail.ru>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Fix check for 'C' format
	specifier to use ch instead of *fmt.

2003-11-21  Artem B. Bityuckiy  <mail_lists@mail.ru>

	* libc/stdio/vfprintf.c (_VFPRINTF_R, get_arg): Move mb-specific
	code within checks for MB_CAPABLE.  For non-mb-capable platforms,
	use simple byte logic.

2003-11-21  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/vfscanf.c (__svfscanf_r)[!_NO_LONGDBL]: Don't use
	_strtold routine for processing floats and doubles since it
	is not as fast as _strtod_r.

2003-11-20 Dhananjay Deshpande <dhananjayd@kpitcummins.com> 

	* libc/machine/h8300/defines.h : Correct pointer register defines 
	for normal mode.
	* libc/machine/h8300/memcpy.S : Use add/sub instead of adds/subs 
	for normal mode.
	* libc/machine/h8300/reg_memcpy.S : Likewise.
	* libc/machine/h8300/reg_memset.S : Likewise.
	* libc/machine/h8300/strcmp.S : Likewise.

2003-11-19  Nicholas Wourms  <nwourms@netscape.net>

	* configure.host: Enable positional arguments for printf
	family for Cygwin.
	* libc/stdio/vfprintf.c (_VFPRINTF_R): Remove extraneous
	pointer reference for quad_ptr_t.

2003-11-19  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/scanf.c: Don't include local.h more than once.

2003-11-18  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/fcntl.h: Declare _open64.
	* libc/include/sys/stat.h: Declare _fstat64.
	* libc/include/sys/unistd.h: Declare _lseek64.

2003-11-17  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/stdlib.h (getprogname): Declare for Cygwin.
	(setprogname): Ditto.

2003-11-10  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/machine/powerpc/ufix64toa.c (_ufix64to_r): Fix shifts
	to use (Ebits + 1) which accounts for the sign-bit.
